Uploaded image for project: 'MariaDB Server'
  1. MariaDB Server
  2. MDEV-22891

Optimizer trace: const tables are not clearly visible

    XMLWordPrintable

Details

    Description

      Encountered this when debugging MDEV-22866:

      It is not immediately apparent from the optimizer trace which tables are constant.

      This is important when debugging join optimization, so it would be nice if this was shown.

      Attachments

        Activity

          People

            psergei Sergei Petrunia
            psergei Sergei Petrunia
            Votes:
            0 Vote for this issue
            Watchers:
            1 Start watching this issue

            Dates

              Created:
              Updated:
              Resolved:

              Time Tracking

                Estimated:
                Original Estimate - Not Specified
                Not Specified
                Remaining:
                Remaining Estimate - 0d
                0d
                Logged:
                Time Spent - 1.5h
                1.5h

                Git Integration

                  Error rendering 'com.xiplink.jira.git.jira_git_plugin:git-issue-webpanel'. Please contact your Jira administrators.