MDEV-22891: Optimizer trace: const tables are not clearly visible

Make mark_join_nest_as_const() print its action into the trace.